# ivqML

./: .gitignore  CMakeLists.txt  README.md
bash/: CMakeLists.txt  RegressionFitFromCSV.cxx
cmake/: CMakeLists.txt  ivqMLConfig.cmake.in  ivqMLInstall.cmake
examples/: 2DKMeansFromCSV.cxx  2DMixtureOfGaussiansFromCSV.cxx  AnalyzeImageTexture.cxx  CMakeLists.txt  ExtractSamplesFrom2DImage.cxx  FeedForwardNetwork_00.cxx  FeedForwardNetwork_01.cxx  FeedForwardNetwork_ADAMFit_Image.cxx  FeedForwardNetwork_GradientDescentFit_Image.cxx  Helpers.h  KMeansImageFilter.cxx  LinearModel_00.cxx  LinearModel_ADAMFit_00.cxx  LinearModel_ADAMFit_CSV.cxx  LinearModel_AnalyticalFit_CSV.cxx  LinearModel_FitGradientDescent_00.cxx  LinearModel_GradientDescentFit_00.cxx  LinearModel_GradientDescentFit_CSV.cxx  LogisticModel_00.cxx  LogisticModel_ADAMFit_00.cxx  LogisticModel_ADAMFit_CSV.cxx  LogisticModel_ADAMFit_Image.cxx  LogisticModel_GradientDescentFit_00.cxx  LogisticModel_GradientDescentFit_CSV.cxx  LogisticModel_GradientDescentFit_Image.cxx  MNIST_FeedForwardNetwork_Train.cxx  MixtureOfGaussiansImageFilter.cxx  PCAImageFilter.cxx  PerceptronModel_00.cxx  Sandbox.cxx
examples/02_logistic_regression/data/: data_00.pgm  experiment_data_00.pgm
examples/02_logistic_regression/python3/: logistic_regression_00.py  logistic_regression_01.py  logistic_regression_02.py  logistic_regression_03.py  test.m
examples/cxx/: CMakeLists.txt  FeedForwardNeuralNetwork_01.cxx  FeedForwardNeuralNetwork_02.cxx  FeedForwardNeuralNetwork_Fit_02.cxx  FeedForwardNeuralNetwork_Fit_03.cxx  LinearModel_00.cxx  LinearModel_01.cxx  LinearModel_02.cxx  LinearModel_Fit_01.cxx  LinearModel_Fit_02.cxx  LinearRegressionModel_01.cxx  LinearRegressionModel_Fit_01.cxx  LinearRegressionModel_Fit_02.cxx  LinearRegressionModel_Fit_03.cxx  LogisticModel_00.cxx  LogisticModel_01.cxx  LogisticModel_02.cxx  LogisticRegressionModel_Fit_01.cxx  LogisticRegressionModel_Fit_02.cxx  NormalizeData.cxx  StandardizeData.cxx
examples/cxx/minesweeper/: CMakeLists.txt  CPUMineSweeperPlayer.cxx  CPUMineSweeperPlayer.h  HumanMineSweeperPlayer.cxx  HumanMineSweeperPlayer.h  LogisticMineSweeperPlayer.cxx  LogisticMineSweeperPlayer.h  MineSweeperBoard.cxx  MineSweeperBoard.h  MineSweeperPlayerBase.cxx  MineSweeperPlayerBase.h  RandomMineSweeperPlayer.cxx  RandomMineSweeperPlayer.h  play.cxx
examples/data/: PGM.py  ans_data_1.csv  ans_data_2.csv  ans_data_3.csv  ans_data_4.csv  binary_data_01.csv  binary_data_01.pbm  binary_data_02.csv  binary_data_02.pbm  binary_data_03.csv  binary_data_03.pbm  data_a0_123_a1_3.141592_0.0001_100.csv  data_a0_123_a1_3.141592_0.01_100.csv  data_a0_123_a1_3.141592_0.1_100.csv  draft_mnist_fwd.nn  generic_2d_1_layer_fwd.nn  generic_2d_2_layer_fwd.nn  generic_2d_3_layer_fwd.nn  input_01.csv  input_01.pgm  input_02.csv  input_02.pgm  input_03.csv  input_03.pgm  input_04.csv  input_04.pgm  input_04_00.csv  input_05.csv  input_05.pgm  linear_data_00.csv  linear_data_01.csv  linear_data_02.csv  linear_data_03.csv  linear_data_04.csv  mnist_01_fwd.nn  save_pgm_as_csv.py
examples/kmeans/: CreateSamples.py  KMeans.py  data_01.csv  data_02.csv  data_03.csv  data_04.csv  test.py
examples/linear_regression/: LinearCost.py  LinearFunction.py  test_regression.py  train_regression.py
examples/linear_regression/synthetic_data/: CreateLinearData.py  data_00.csv  data_01.csv
examples/logistic_regression/: ActivationFunctions.py  BinaryLabelingCost.py  Perceptron.py  data.ppm  data3.ppm  out.ppm  test_Perceptron.py  test_perceptron.py  test_training.py  train_perceptron.py
examples/logistic_regression/synthetic_data/: ConvertPGMToCSVDataFile.py  CreateDataFromMedian.py  data_00.pgm  data_00_10_10_0.1_00.csv  data_01.pgm  data_02.pgm  data_03.pgm  data_11.pgm  data_12.pgm  mi_otra_imagen.pgm  mi_otro_ejemplo_de_experimento.csv  simple_data.csv
examples/neural_network/: ActivationFunctions.cxx  ActivationFunctions.h  CSVReader.cxx  CSVReader.h  ClassificationTrainer.cxx  ClassificationTrainer.h  ConvertPGMToCSVDataFile.py  Layer.cxx  Layer.h  Makefile  NeuralNetwork.cxx  NeuralNetwork.h  bagging.cxx  binary_classifier.cxx  experiment.cxx  simple_data.csv  split.sh  test.cxx
examples/neural_network/csv/: circle.csv  circle_1.csv  circle_2.csv  circle_3.csv
examples/neural_network/pgm/: circle.pgm
examples/pca/: Makefile  data_00.csv  data_01.csv  data_02.csv  data_03.csv  out.csv  out.txt  pca.cxx  pca.py
examples/python/: Draw_LinearModel_Cost_01.py  ExtractBalancedSamplesFromImage.py  FeedForward_01.py  FeedForward_NeuralNetwork_Model_Fit_ADAM_01.py  FeedForward_NeuralNetwork_Model_Fit_MNIST.py  LinearModel_Fit_01.py  LinearModel_Fit_02.py  LinearModel_Fit_03.py  LinearModel_Fit_ADAM_01.py  LinearModel_Fit_GradientDescent_01.py  LogisticModel_Fit_ADAM_01.py  LogisticModel_Fit_GradientDescent_01.py  ReadData.py  SVM_Fit_ADAM_01.py  binary_data_01.csv  binary_data_02.csv  binary_data_03.csv  extract_npz.py  linear_data_01.csv  out.txt
examples/python3/: ConvertPBM2CSV.py  FeedForwardNeuralNetwork_00.py  FeedForwardNeuralNetwork_01.py  FeedForwardNeuralNetwork_02.py  FeedForwardNeuralNetwork_MNIST_00.py  FeedForwardNeuralNetwork_MNIST_01.py  KMeans_00.py  LinearModel_00.py  LinearModel_01.py  LinearModel_DrawCost.py  LinearModel_Fit_01.py  LinearModel_Fit_GradientDescent_01.py  LinearRegression_00.py  LinearRegression_01.py  LogisticModel_00.py  LogisticModel_01.py  LogisticModel_Fit_GradientDescent_01.py  LogisticRegression_00.py  LogisticRegression_01.py  LogisticRegression_02.py  MNIST_initialize_logistic_models.py  MNIST_use_logistic_models.py  MixtureOfGaussians_00.py  leo.nn  plot.txt
examples/python3/MineSweeper/: MineSweeperBoard.py  Player_Interactive.py  Player_Random.py
examples/svm/: CreateSamples.py  SVM.py  data_svm_00.csv  data_svm_01.csv  data_svm_02.csv  data_svm_03.csv  data_svm_04.csv
lib/cxx/: CMakeLists.txt
lib/cxx/PUJ/: Model.h  Regression.h  Traits.h
lib/ivqML/: CMakeLists.txt  Config.h
lib/ivqML/Common/: ImageHelpers.h  ImageHelpers.hxx  KMeans.h  KMeans.hxx  MixtureOfGaussians.h  (+3 more)
(+260 files in other folders)
